# DE-zoomcamp-Project

./: .env  .gitignore  README.md  data_exploring.ipynb  download.py  main.py  pyproject.toml  run_dbt.sh  run_local_setup.sh  seed_monitoring_location.csv1
DE-zoomcamp-Project/: .gitignore  pyproject.toml  run_local_setup.sh
DE-zoomcamp-Project/terraform/: main.tf  run_infrastructure.sh
cloud/bigquery/: create_external_tables.sql
cloud/dataproc/: repartition.py  run_repartitioning.sh
dbt/: pyproject.toml  refine_seed_columns.py
dbt/dbt_bigquery_transformation/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/dbt_bigquery_transformation/models/marts/: schema.yml  (+3 more)
dbt/dbt_bigquery_transformation/seeds/: monitoring_location.csv1  seed_properties.yml
dbt/dbt_bigquery_transformation/snapshots/: source_int_enriched.yml
dbt/dbt_bigquery_transformation/tests/: assert_enriched_monitor_id_unique.sql  assert_int_no_orphaned_sites.sql  assert_no_negative_bike_counts.sql  assert_peak_times_one_row_per_area.sql  assert_rpt_mode_percentages_sum_to_100.sql
frontend/: app.py  main.py
infrastructure/: main.tf  run_infrastructure.sh  variables.tf
ingestion/: download.py  upload_to_gcs.sh
processing/: repartition.py  run_repartitioning.sh
streamlit/: app.py
terraform/: main.tf  run_infrastructure.sh  variables.tf
terraform/envs/prod/: backend.tf  main.tf  provider.tf  variables.tf
terraform/modules/bigquery/: main.tf  variables.tf
terraform/modules/dataproc/: main.tf  variables.tf
terraform/modules/gcs/: main.tf  variables.tf
(+3 files in other folders)
