[project]
name = "de-zoomcamp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [

    "google-cloud-storage",
    "pandas>=2.3.3",
    "pyspark==3.5.1",
    "python-dotenv>=1.2.2",
    "requests",
    "streamlit>=1.55.0",
    "dbt-bigquery",
    "dbt-core",

]